--- a/style.css
+++ b/style.css
@@ -874,4 +874,6 @@ div.comment-bacon {
 	}
 	
 	.garyb { max-width: 320px; width: 100%; }
+	
+	.aligncenter { margin: 0 auto; display: block; width: 100%; height: auto;}
 }
