--- a/style.css
+++ b/style.css
@@ -95,7 +95,8 @@ h3 { font-size: 24px; line-height: 46px; font-weight: 700; }
 	margin-bottom: 3px;
 }
 
-.menu-blog-container ul li a:hover {
+.menu-blog-container ul li a:hover, .menu-blog-container ul li.current-menu-item a {
+
 	display: block;
 	box-shadow: inset 0 -3px #000;
 	transform: translateY(3px);
