--- a/style.css
+++ b/style.css
@@ -94,6 +94,9 @@ strong { font-weight: 700; }
 }
 
 .gform_button {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
   box-sizing: border-box;
 	display: inline-block;
   -webkit-transition: all .15s ease-in-out;
@@ -107,6 +110,7 @@ strong { font-weight: 700; }
   border: 3px solid #000;
   box-shadow: inset 0 -3px #FF9912;
   font-size: 16px;
+	border-radius: 0;
 }
 
 .menu-blog-container ul li a:hover, .menu-blog-container ul li.current-menu-item a, .gform_button:hover {
